<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck,TextSizeCheck"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <LinearLayout
        android:id="@+id/EQ1btnImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".EquationsActivity">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/EQTitel"
            android:textColor="#4053BC"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/EQ1Titel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/EQ1ImageBtn"
            android:layout_width="360dp"
            android:layout_height="196dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/EQ1Discribtion"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ch4"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/_2_propane_combustion_equation"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/EQ2ImageBtn"
            android:layout_width="360dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/propan"
            android:contentDescription="@string/EQ2Todo" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/_3_combustion_of_ethanol"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/EQ3ImageBtn"
            android:layout_width="360dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ethanol"
            android:contentDescription="@string/todoEq3" />

        <ImageButton
            android:id="@+id/BackEQbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#3F51B5"
            app:srcCompat="@android:drawable/ic_media_rew"
            android:contentDescription="@string/todoBack" />

    </LinearLayout>

</ScrollView>
